--- a/style.css
+++ b/style.css
@@ -9,17 +9,37 @@ html, body {
 }
 
 .main-content {
+    background-color: rgba(50, 50, 60, 0.95);
+    font-size: 20px;
+    color: #e6e6e6;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: 100%vw;
     position: relative; /* So that the pseudo-element for the overlay is positioned relative to it */
-    background-image: url('Images/yacht1.jpg');
+    background-image: url('Images/yacht1.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     height: 50rem; /* Set the desired height */
 
     /* figure out why heading is on left side */
+}
+
+#homebutton {
+    background: transparent;
+    color: #e6e6e6;
+    width: 8rem;
+    height: 2rem;
+    font-family: 'Montserrat', 'sans-serif';
+    border: 2px solid #e6e6e6;
+    border-radius: 10px;
+}
+
+#homebutton:hover {
+    color: black;
+    background-color:rgb(121, 121, 123);
 }
 
 .main-content::before {
@@ -41,10 +61,8 @@ html, body {
 #mainheading {
     font-size: 25px;
     color: #e6e6e6;
-    justify-content: center;
-    text-align: center;
     display: flex;
-    align-items: center;
+    justify-content: center;
     text-decoration: underline;
 }
 
@@ -83,8 +101,8 @@ nav a {
     font-size: px;
     color: #e6e6e6;
     text-decoration: none;
-    transition: color 0.3s;
-    border-bottom: 0.3s;
+    transition: color 0.5s;
+    border-bottom: 0.5s;
     padding-bottom: 5px;
     padding: 10px 10px;
 }
@@ -95,23 +113,220 @@ nav a:hover {
     background-color:rgb(121, 121, 123)
 }
 
-.main-content {
-    background-color: rgba(50, 50, 60, 0.95);
-    font-size: 20px;
-    color: #e6e6e6;
-    top:0;
-    left:0;
-    right:0;
-    width: 100%;
-    padding: 2px 6px;
-    border-radius: 0;
-}
-
 .footer {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     font-size: 13px;
     color: #e6e6e6;
-    padding: 1rem 0rem;
+    padding: 0rem 0rem;
+    gap: 0.5rem;
+}
 
+.footer-icons {
+    display: flex;
+    gap: 1rem;
+    font-size: 1.5rem;
+    padding-bottom: 0.5rem;
+}
+
+.footer a {
+    color: #e6e6e6;
+    text-decoration: none;
+    transition: color 0.5s;
+    border-bottom: 0.5s;
+}
+
+.footer a:hover {
+    color: #141414;
+    border-bottom: 2px solid #141414 ;
+    background-color:rgb(121, 121, 123);
+    border-radius: 2.5px;
+}
+
+/* gallery section*/
+
+.main-gallery-container {
+    margin-top: 50px;
+}
+
+.main-gallery-containter, h2 {
+    font-size: 25px;
+    color: #e6e6e6;
+    display: flex;
+    justify-content: center;
+    text-decoration: underline;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 75vw;
+    margin: 20px auto;
+}
+
+figure {
+    margin: 10px;
+    padding: 0px;
+    position: relative;
+}
+
+figure img {
+    width: 100%;
+}
+
+.gallery img {
+    padding: 0px;
+    border: 3px solid #fff;
+    box-shadow: 0px 0px 3px #ccc;
+    z-index: 0;
+    position: relative;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+figcaption {
+    background-color: rgba(225, 225, 225, 0.5);
+    width: 100%;
+    text-align: center;
+    color: #5e423f;
+    z-index: 1;
+    padding: 9px 0px 11px 0px;
+    font-size: 15px;
+    position: absolute;
+    bottom: 6px;
+}
+
+@media screen and (max-width: 600px) {
+     figcaption {
+        font-size: 3vw;
+     }
+     .gallery {
+        grid-template-columns: 1fr;
+        width: 90vw;
+     }
+}
+
+/* contact form */
+
+.contact {
+    background-color: rgba(50, 50, 60, 0.95);
+    margin-top: 80px;
+    margin-left: 470px;
+    margin-right: 470px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-radius: 20px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.52);   
+}
+
+label {
+    color: #e6e6e6
+}
+
+#contactp {
+    color: #e6e6e6;
+}
+
+#name {
+    color: rgba(0, 0, 0);
+}
+
+#email {
+    color: rgb(0, 0, 0);
+}
+
+#message {
+    color: rgba(0, 0, 0);
+    height: 10rem;
+    width: 20rem;
+    text-align: center;
+}
+
+#submit-button {
+    width: 150px;
+    height: 40px;
+}
+
+/* about us section */
+
+
+
+#aboutussection {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 43px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 0px;
+    background-color: rgba(50, 50, 60, 0.95);
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.52);
+    gap: 5rem;
+}
+
+#aboutusimg {
+    width: 100%;
+    height: auto; 
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.52);
+
+}
+
+.aboutustext {
+    font-size: 15px;
+    color: #e6e6e6;
+    padding-left: 0rem;
+    padding-right: 4.5rem;
+    flex-basis: 50%
+    
+}
+
+.aboutustext h2,
+.aboutustext h3, 
+.aboutustext p, 
+.aboutustext li {
+    padding: 0.1rem;
+    font-size: 15px;
+    
+}
+
+/* tours page */
+
+.toursmain {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 10rem;
+    margin-right: 10rem;
+    text-align: center;
+
+
+}
+
+.tourcontent {
+    background-color: rgba(50, 50, 60, 0.95);
+    padding: 0rem 2.5rem;
+    color: #e6e6e6
+}
+
+.tourbuttoncontainer {
+    padding-bottom: 1rem;
+}
+
+.tourbutton {
+    height: 30px;
+    width: 150px;
+    font-family: 'Montserrat', 'sans-serif';
+    font-size: 16px;
+    border-radius: 10px;
+    background-color: #1b1b20;
+    color: #e6e6e6;
+}
+
+.tourbutton:hover {
+    transition: 0.5s;
+    background-color: #5c5b5b;
 }
